fixed padding on small screens

--- a/main.css
+++ b/main.css
@@ -805,8 +805,8 @@ canvas {
     }
 
     .section {
-        padding-left: 40px;
-        padding-right: 40px;
+        padding-left: 80px;
+        padding-right: 80px;
     }
 
     #head2 {
